# advent-of-code-2022

./: advent_of_code_2022.opam  dune-project
lib/: day01.ml  day02.ml  day03.ml  day04.ml  day04.mli  dune  io.ml  listUtil.ml  range.ml  range.mli  runUtil.ml  stringUtil.ml
