(lang dune 3.5)

(name advent_of_code_2022)

(generate_opam_files true)

(source
 (github mloft74/advent-of-code-2022))

(authors "Makayden Lofthouse")

(maintainers "mloft74")

(license MIT)

(package
 (name advent_of_code_2022)
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
